--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,65 @@ bin/docker-compose
 bin/terraform
 *snap
 data-engineering-zoomcamp-gcp/workshops/*
+.ivy2/cache/ivy-report.css
+.ivy2/cache/ivy-report.xsl
+.ivy2/cache/com.google.code.findbugs/jsr305/ivy-3.0.0.xml
+.ivy2/cache/com.google.code.findbugs/jsr305/ivy-3.0.0.xml.original
+.ivy2/cache/com.google.code.findbugs/jsr305/ivydata-3.0.0.properties
+.ivy2/cache/commons-logging/commons-logging/ivy-1.1.3.xml
+.ivy2/cache/commons-logging/commons-logging/ivy-1.1.3.xml.original
+.ivy2/cache/commons-logging/commons-logging/ivydata-1.1.3.properties
+.ivy2/cache/org.apache/apache/ivy-13.xml
+.ivy2/cache/org.apache/apache/ivy-13.xml.original
+.ivy2/cache/org.apache/apache/ivy-18.xml
+.ivy2/cache/org.apache/apache/ivy-18.xml.original
+.ivy2/cache/org.apache/apache/ivy-23.xml
+.ivy2/cache/org.apache/apache/ivy-23.xml.original
+.ivy2/cache/org.apache/apache/ivydata-13.properties
+.ivy2/cache/org.apache/apache/ivydata-18.properties
+.ivy2/cache/org.apache/apache/ivydata-23.properties
+.ivy2/cache/org.apache.commons/commons-parent/ivy-28.xml
+.ivy2/cache/org.apache.commons/commons-parent/ivy-28.xml.original
+.ivy2/cache/org.apache.commons/commons-parent/ivy-52.xml
+.ivy2/cache/org.apache.commons/commons-parent/ivy-52.xml.original
+.ivy2/cache/org.apache.commons/commons-parent/ivydata-28.properties
+.ivy2/cache/org.apache.commons/commons-parent/ivydata-52.properties
+.ivy2/cache/org.apache.commons/commons-pool2/ivy-2.11.1.xml
+.ivy2/cache/org.apache.commons/commons-pool2/ivy-2.11.1.xml.original
+.ivy2/cache/org.apache.commons/commons-pool2/ivydata-2.11.1.properties
+.ivy2/cache/org.apache.hadoop/hadoop-client-api/ivy-3.3.2.xml
+.ivy2/cache/org.apache.hadoop/hadoop-client-api/ivy-3.3.2.xml.original
+.ivy2/cache/org.apache.hadoop/hadoop-client-api/ivydata-3.3.2.properties
+.ivy2/cache/org.apache.hadoop/hadoop-client-runtime/ivy-3.3.2.xml
+.ivy2/cache/org.apache.hadoop/hadoop-client-runtime/ivy-3.3.2.xml.original
+.ivy2/cache/org.apache.hadoop/hadoop-client-runtime/ivydata-3.3.2.properties
+.ivy2/cache/org.apache.hadoop/hadoop-main/ivy-3.3.2.xml
+.ivy2/cache/org.apache.hadoop/hadoop-main/ivy-3.3.2.xml.original
+.ivy2/cache/org.apache.hadoop/hadoop-main/ivydata-3.3.2.properties
+.ivy2/cache/org.apache.hadoop/hadoop-project/ivy-3.3.2.xml
+.ivy2/cache/org.apache.hadoop/hadoop-project/ivy-3.3.2.xml.original
+.ivy2/cache/org.apache.hadoop/hadoop-project/ivydata-3.3.2.properties
+.ivy2/cache/org.apache.kafka/kafka-clients/ivy-2.8.1.xml
+.ivy2/cache/org.apache.kafka/kafka-clients/ivy-2.8.1.xml.original
+.ivy2/cache/org.apache.kafka/kafka-clients/ivydata-2.8.1.properties
+.ivy2/cache/org.junit/junit-bom/ivy-5.8.0-M1.xml
+.ivy2/cache/org.junit/junit-bom/ivy-5.8.0-M1.xml.original
+.ivy2/cache/org.junit/junit-bom/ivydata-5.8.0-M1.properties
+.ivy2/cache/org.lz4/lz4-java/ivy-1.8.0.xml
+.ivy2/cache/org.lz4/lz4-java/ivy-1.8.0.xml.original
+.ivy2/cache/org.lz4/lz4-java/ivydata-1.8.0.properties
+.ivy2/cache/org.slf4j/slf4j-api/ivy-1.7.32.xml
+.ivy2/cache/org.slf4j/slf4j-api/ivy-1.7.32.xml.original
+.ivy2/cache/org.slf4j/slf4j-api/ivydata-1.7.32.properties
+.ivy2/cache/org.slf4j/slf4j-parent/ivy-1.7.32.xml
+.ivy2/cache/org.slf4j/slf4j-parent/ivy-1.7.32.xml.original
+.ivy2/cache/org.slf4j/slf4j-parent/ivydata-1.7.32.properties
+.ivy2/cache/org.sonatype.oss/oss-parent/ivy-9.xml
+.ivy2/cache/org.sonatype.oss/oss-parent/ivy-9.xml.original
+.ivy2/cache/org.sonatype.oss/oss-parent/ivydata-9.properties
+.ivy2/cache/org.tukaani/xz/ivy-1.8.xml
+.ivy2/cache/org.tukaani/xz/ivy-1.8.xml.original
+.ivy2/cache/org.tukaani/xz/ivydata-1.8.properties
+.ivy2/cache/org.xerial.snappy/snappy-java/ivy-1.1.8.4.xml
+.ivy2/cache/org.xerial.snappy/snappy-java/ivy-1.1.8.4.xml.original
+.ivy2/cache/org.xerial.snappy/snappy-java/ivydata-1.1.8.4.properties
